src/runtime/partials/components/c-select/C-Select.scss
$focus-outline-spacing: unitize(3px)!default;

.c-select {
  $module: &;
  display: block;

  &__label {
    display: block;
    width: 100%;
    user-select: none;
    margin-bottom: spacing('xxxs');
    @include font-style("form-label");
    span {
      font: inherit;
    }
  }

  &__caret {
    display: block;
    position: absolute;
    top: 50%;
    right: spacing('xs');
    transform: translate(0, -50%);
    transition: transition(transform);
    svg {
      display: block;
      opacity: .5;
    }
  }

  .multiselect {
    display: block;
    position: relative;
    width: 100%;
    min-width: unitize(100px);
    min-height: 0;
    border-width: 1px;
    border-style: solid;
    border-radius: border-radius('xs');
    outline-style: solid!important;
    outline-width: unitize(1px)!important;
    outline-offset: $focus-outline-spacing;
    outline-color: transparent;
    background: transparent;
    font: inherit;
    transition: transition(outline-color), transition(border-color), transition(background-color);
    @include color-palette("select");
    @include font-style("form-text");

    &--disabled {
      opacity: .5;
      .multiselect__placeholder {
        display: none
      }
    }

    &--active {
      z-index: 50
    }

    * {
      min-height: 0;
      background: transparent;
      color: inherit;
      font: inherit;
      cursor: pointer;
    }

    &__tags {
      padding: spacing('xxs') spacing('xs');
      border-radius: 0;
      border-width: 0;
    }

    &__input, &__single {
      display: block;
      width: calc(100% - #{spacing('xs')});
      margin: 0;
      padding: 0;
      overflow: hidden;
      border-color: inherit;
      text-overflow: ellipsis;
      white-space: nowrap;
      touch-action: manipulation
    }

    &__placeholder {
      display: block;
      margin: 0;
      padding: 0;
      opacity: .5;
      user-select: none;
      &:after {
        content: "\00a0";
        display: inline-block;
        width: 0px;
        font-style: inherit;
      }
    }

    &__content-wrapper {
      display: block;
      position: absolute;
      top: calc(100% + #{spacing('xxxxs')});
      left: 0;
      width: auto;
      min-width: 100%;
      overflow: clip;
      border-radius: border-radius('xs');
      border-width: 1px;
      border-style: solid;
      @include color-palette("select-wrapper");
    }

    &__content {
      list-style: none;
      display: inline-block;
      padding: 0;
      margin: 0;
      min-width: 100%;
      vertical-align: top;
      width: 100%;
      max-height: unitize(300px);
      overflow: hidden;
      overflow-x: hidden;
      overflow-y: scroll;
      -ms-overflow-style: none;
      scrollbar-width: none;
      &::-webkit-scrollbar {
        display: none;
      }
    }

    &__option {
      display: block;
      width: 100%;
      padding: 0;
      transition: transition(color), transition(background-color);
      span {
        display: block;
        width: 100%;
        padding: spacing('xxs') spacing('xs');
        overflow: hidden;
        transition: transition(color);
        text-overflow: ellipsis;
        word-break: keep-all;
        white-space: normal;
      }

      &--highlight, &--selected, &:hover {
        @include color-palette("select-interaction");
      }
    }

    &--active {
      #{$module}__caret {
        transform: translate(0, -50%) rotate(180deg);
      }
    }

  }

  &__instruction {
    display: block;
    flex-shrink: 0;
    flex-grow: 0;
    width: 100%;
    @include font-style("form-label");
    span {
      font: inherit;
    }
  }

}

